# fastapi-mongo-movies

./: .dockerignore  .env.docker  .gitignore  AGENTS.md  CORS_UPDATE.md  DATABASE_ARCHITECTURE.md  DEP_AGENTS.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LOGGING.md  LOGGING_SETUP.md  README.md  RESTRUCTURED.md  TEST_RUNNERS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main  main.py  nginx.conf  pyproject.toml  render.yml  test_context_manager.py  test_poster_validation.py
.Jules/: bolt.md  palette.md  sentinel.md
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
api/: main.py  models.py
app/: __init__.py
app/DEP_MODELS/: __init__.py  movie.py
app/api/: main.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
app/repositories/: base.py  comment_repository.py  movie_repository.py  protocol.py  user_repository.py
app/schemas/: movie.py  schemas.py
app/services/: comment_service.py  job_management_service.py  movie_service.py  user_service.py
backend/: database.py  main.py  pyproject.toml
backend/api/: main.py
backend/core/: config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limiter.py  request_metrics.py  security.py  validators.py
backend/repositories/: base.py  comment_repository.py  movie_repository.py  protocol.py  user_repository.py
backend/schemas/: __init__.py  base.py  comment.py  common.py  job.py  movie.py  schemas.py  user.py
backend/scripts/: create_sorting_indexes.py  validate_movies.py
backend/services/: comment_service.py  job_management_service.py  movie_service.py  poster_validation_service.py  user_service.py
backend/tests/: conftest.py  test_context_manager.py  test_movie_service_cache.py  test_password_security.py  test_poster_validation.py  test_restructured.py  test_sentinel_fixes.py  test_services.py  test_settings_bool.py
config/: Config.py
frontend/: .dockerignore  .gitignore  OVERFLOW_GUIDE.md  README.md  data.py  helper.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  test-css.html
frontend/assets/: styles.css
frontend/components/: ganeric.py  movie_details.py  movie_list.py
frontend/e2e/: verify_clear_button.spec.ts
frontend/public/: index.html
frontend_react/: README.md  package-lock.json  package.json
scripts/: create_sorting_indexes.py  init-mongo.js  validate_movies.py
tests/: conftest.py  test_context_manager.py  test_poster_validation.py  test_restructured.py  test_services.py  test_settings_bool.py
(+150 files in other folders)
