[project]
name = "fastapi-mongo-movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-fasthtml>=0.12.39",
    "uvicorn>=0.40.0",
    "requests>=2.32.5",
]
